--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>andualem.me</title>
-  <head>
-
+    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  </head>
   <body>
-    A webpage
+    <nav id="navbar">
+      <ul>
+        <div class="flex-container">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Projects</a</li>
+            <li><a href="#">Organizations</a</li>
+            <li><a href="#">About</a</li>
+        </div>
+      </ul>
+    </nav>
+
+    <div class="EmptySpace"></div>
+
+    <div class="container">
+        <div class="tile" id="profile-pic">
+            <img src="/andu.jpg" width="300" height="300" />
+        </div>
+
+        <p class="tile" id="description">
+            Andualem U Kelbessa<br/>
+            Dartmouth College '19<br/>
+            Engineering Sciences and Computer Science<br/>
+            Hanover, NH<br/>
+        </p>
+    </div>
+
+    <a href="#" class="button" id="connect">Connect on LinkedIn!</a>
+
+    <p id="description2">
+      A little about your self.
+    </p>
+
+    <input type="text" placeholder="Search Key Word" />
+    </br>
+    <button type="button">Click Me</button>
+
+    <div class="footer">
+      <div class="footer-container">
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Snapchat</a></li>
+      </div>
+    </div>
   </body>
 </html>
