--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <header>
-      <nav id="navbar">
-        <a href="#" id="menu-icon"></a>
-          <div class="flex-container">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Projects</a</li>
-              <li><a href="#">Organizations</a</li>
-              <li><a href="#">About</a</li>
+      <div class="nav">
+        <label for="toggle">&#9776;</label>
+        <input type="checkbox" id="toggle"/>
+          <div class="menu">
+              <a href="#">Home</a>
+              <a href="#">Projects</a>
+              <a href="#">Organizations</a>
+              <a href="#">About</a>
           </div>
-      </nav>
-    </header>
+      </div>
 
     <div class="EmptySpace"></div>
 
